--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
         .bg-space {
             position: fixed;
             top: 0; left: 0; width: 100%; height: 100%;
-            background: 
-                radial-gradient(circle at 50% 50%, #0a0c18 0%, #050608 100%);
+            background: radial-gradient(circle at 50% 50%, #0a0c18 0%, #050608 100%);
             z-index: -2;
         }
 
@@ -37,7 +36,7 @@
             background-size: 60px 60px;
             transform: perspective(500px) rotateX(60deg) translateY(-100px);
             transform-origin: top;
-            opacity: 0.15;
+            opacity: 0.25;
             animation: moveGrid 20s linear infinite;
             z-index: -1;
         }
@@ -52,22 +51,18 @@
             top: 0; left: 0; width: 100%; height: 100%;
             background-image: radial-gradient(white 1px, transparent 1px);
             background-size: 100px 100px;
-            opacity: 0.1;
+            opacity: 0.15;
             z-index: -1;
             animation: twinkle 5s infinite;
         }
 
         @keyframes twinkle { 
-            0%, 100% { opacity: 0.05; } 
-            50% { opacity: 0.15; } 
+            0%, 100% { opacity: 0.08; } 
+            50% { opacity: 0.2; } 
         }
 
-        .glow-title { 
-            text-shadow: 0 0 40px var(--accent-glow);
-            font-style: italic;
-        }
+        .glow-title { text-shadow: 0 0 50px var(--accent-glow); font-style: italic; }
 
-        /* SZKLISTE KAFELKI */
         .neo-card { 
             background: rgba(13, 15, 20, 0.7); 
             border: 1px solid rgba(255, 255, 255, 0.05); 
@@ -80,28 +75,14 @@
         .neo-card.offline { border-left-color: #ef4444; opacity: 0.4; filter: grayscale(0.8); }
         .neo-card:hover { transform: translateY(-8px) scale(1.02); border-color: var(--accent-color); box-shadow: 0 20px 40px -10px var(--accent-glow); }
 
-        #overlay { display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.9); backdrop-filter: blur(20px); z-index: 100; align-items: center; justify-content: center; padding: 20px; }
-        .modal-box { background: rgba(15, 17, 22, 0.95); border: 1px solid var(--accent-color); max-width: 450px; width: 100%; border-radius: 24px; padding: 35px; box-shadow: 0 0 100px -20px var(--accent-glow); }
+        #overlay { display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.92); backdrop-filter: blur(25px); z-index: 100; align-items: center; justify-content: center; padding: 20px; }
+        .modal-box { background: rgba(15, 17, 22, 0.95); border: 1px solid var(--accent-color); max-width: 450px; width: 100%; border-radius: 28px; padding: 35px; box-shadow: 0 0 100px -20px var(--accent-glow); }
 
-        .search-container { background: rgba(13, 15, 18, 0.8); border: 1px solid rgba(255, 255, 255, 0.05); border-bottom: 5px solid var(--accent-color); }
-        
-        /* PRZYCISK ULUBIONE */
-        .btn-toggle { 
-            background: rgba(255,255,255,0.03); 
-            border: 1px solid rgba(255,255,255,0.1); 
-            transition: 0.3s; 
-            height: 54px;
-        }
-        .btn-toggle.active { 
-            background: var(--accent-color) !important; 
-            color: white !important; 
-            border-color: white !important;
-            box-shadow: 0 0 25px var(--accent-glow);
-            font-weight: 900;
-        }
+        .btn-toggle { background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.1); transition: 0.3s; height: 54px; }
+        .btn-toggle.active { background: var(--accent-color) !important; color: white !important; border-color: white !important; box-shadow: 0 0 30px var(--accent-glow); font-weight: 900; }
 
         .fav-star { transition: 0.2s; color: rgba(255,255,255,0.1); width: 22px; height: 22px; cursor: pointer; }
-        .fav-star.active { color: #FFD700; filter: drop-shadow(0 0 5px #FFD700); }
+        .fav-star.active { color: #FFD700; filter: drop-shadow(0 0 8px #FFD700); }
     </style>
 </head>
 <body class="py-16 px-6">
@@ -112,7 +93,7 @@
 
     <div id="overlay" onclick="closeModal()">
         <div class="modal-box text-center" onclick="event.stopPropagation()">
-            <h2 id="modalName" class="text-4xl font-black text-white uppercase mb-6 tracking-tighter italic">---</h2>
+            <h2 id="modalName" class="text-4xl font-black text-white italic uppercase mb-6 tracking-tighter">---</h2>
             <div class="grid grid-cols-1 gap-4 text-left">
                 <div class="bg-white/5 p-4 rounded-xl border border-white/5 flex justify-between items-center">
                     <div>
@@ -120,16 +101,16 @@
                         <span id="modalStatus" class="text-2xl font-black italic tracking-tighter uppercase">---</span>
                     </div>
                     <div class="text-right">
-                        <span class="text-[9px] font-bold text-white/20 uppercase block mb-1">Dzisiejsza Sesja</span>
+                        <span class="text-[9px] font-bold text-white/20 uppercase block mb-1">Sesja Dzisiaj</span>
                         <span id="modalDuration" class="text-xl font-bold text-white italic">---</span>
                     </div>
                 </div>
                 <div class="bg-white/5 p-4 rounded-xl border border-white/5 text-center">
-                    <span class="text-[9px] font-bold text-white/20 uppercase block mb-2 italic">Dzisiejsze ID</span>
+                    <span class="text-[9px] font-bold text-white/20 uppercase block mb-2 italic">Historia ID</span>
                     <div id="modalLogs" class="text-blue-400 font-black text-2xl tracking-widest"></div>
                 </div>
             </div>
-            <button onclick="closeModal()" class="mt-8 w-full py-4 rounded-xl text-[10px] font-black uppercase tracking-[0.3em] border border-white/10 hover:bg-white hover:text-black transition-all">Zamknij Protokół</button>
+            <button onclick="closeModal()" class="mt-8 w-full py-4 rounded-xl text-[10px] font-black uppercase tracking-[0.3em] border border-white/10 hover:bg-white hover:text-black transition-all">Zamknij</button>
         </div>
     </div>
 
@@ -149,7 +130,7 @@
         </div>
 
         <div class="max-w-3xl w-full mb-16">
-            <div class="search-container rounded-3xl overflow-hidden shadow-2xl mb-8">
+            <div class="search-container p-2 rounded-3xl overflow-hidden shadow-2xl mb-8">
                 <input type="text" id="search" placeholder="SZUKAJ CELU LUB HISTORII..." class="w-full bg-transparent py-8 px-10 text-white outline-none font-extrabold text-3xl placeholder-white/5 uppercase tracking-tighter text-center">
             </div>
             <div class="inline-flex items-center gap-6 px-12 py-4 rounded-full bg-white/5 border border-white/5 backdrop-blur-xl">
@@ -214,7 +195,7 @@
                     onlinePlayers = d.Data.players.sort((a, b) => a.id - b.id);
                     renderList();
                 }
-            } catch (e) { console.error("Protokół błędu: Brak połączenia z serwerem."); }
+            } catch (e) { console.error("Error fetching data."); }
         }
 
         function renderList() {
@@ -230,6 +211,8 @@
                     const isOnline = h.isOnline;
                     const id = isOnline ? (onlinePlayers.find(op => op.name === name)?.id || h.idHistory[h.idHistory.length-1]) : h.idHistory[h.idHistory.length-1];
                     const isFav = favorites.includes(name);
+                    const isGoat = name.toLowerCase().includes('przmx') || name.toLowerCase().includes('kejcpi') || name.toLowerCase().includes('razzes');
+
                     if (showOnlyFavs && !isFav) return;
 
                     const card = document.createElement('div');
@@ -238,20 +221,21 @@
                     card.innerHTML = `
                         <div class="flex flex-col gap-1 min-w-0">
                             <div class="flex items-center gap-3">
-                                <span class="text-[9px] font-black ${isOnline ? 'text-green-500' : 'text-red-500'} uppercase tracking-[0.2em]">${isOnline ? 'ONLINE' : 'OFFLINE'}</span>
+                                <span class="text-[9px] font-black ${isOnline ? (isGoat ? 'text-white' : 'text-green-500') : 'text-red-500'} uppercase tracking-[0.2em]">${isOnline ? (isGoat ? 'NICK GOATA' : 'ONLINE') : 'OFFLINE'}</span>
                                 <svg onclick="event.stopPropagation(); toggleFav('${name}')" class="fav-star ${isFav ? 'active' : ''}" fill="currentColor" viewBox="0 0 20 20"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"/></svg>
                             </div>
-                            <h3 class="text-xl font-bold text-slate-200 truncate pr-4">${name}</h3>
+                            <h3 class="text-xl font-bold ${isGoat ? 'text-white underline decoration-2 underline-offset-4' : 'text-slate-200'} truncate pr-4">${name}</h3>
                         </div>
                         <div class="flex flex-col items-end shrink-0">
                             <span class="text-[9px] font-bold text-white/10 uppercase mb-1">ID</span>
-                            <span class="text-4xl font-black italic" style="color: ${isOnline ? 'var(--accent-color)' : '#ef4444'}">${id}</span>
+                            <span class="text-4xl font-black italic" style="color: ${isOnline ? (isGoat ? '#fff' : 'var(--accent-color)') : '#ef4444'}">${id}</span>
                         </div>`;
                     container.appendChild(card);
                 });
             } else {
                 onlinePlayers.forEach(p => {
                     const isFav = favorites.includes(p.name);
+                    const isGoat = p.name.toLowerCase().includes('przmx') || p.name.toLowerCase().includes('kejcpi') || p.name.toLowerCase().includes('razzes');
                     if (showOnlyFavs && !isFav) return;
                     const card = document.createElement('div');
                     card.className = `neo-card p-6 rounded-2xl flex items-center justify-between group`;
@@ -259,14 +243,14 @@
                     card.innerHTML = `
                         <div class="flex flex-col gap-1 min-w-0">
                             <div class="flex items-center gap-3">
-                                <span class="text-[9px] font-black text-white/30 uppercase tracking-[0.2em]">CEL AKTYWNY</span>
+                                <span class="text-[9px] font-black ${isGoat ? 'text-white' : 'text-white/30'} uppercase tracking-[0.2em]">${isGoat ? 'NICK GOATA' : 'NICK CWELA'}</span>
                                 <svg onclick="event.stopPropagation(); toggleFav('${p.name}')" class="fav-star ${isFav ? 'active' : ''}" fill="currentColor" viewBox="0 0 20 20"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"/></svg>
                             </div>
-                            <h3 class="text-xl font-bold text-slate-200 truncate pr-4">${p.name}</h3>
+                            <h3 class="text-xl font-bold ${isGoat ? 'text-white underline decoration-2 underline-offset-4' : 'text-slate-200'} truncate pr-4">${p.name}</h3>
                         </div>
                         <div class="flex flex-col items-end shrink-0">
                             <span class="text-[9px] font-bold text-white/10 uppercase mb-1">ID</span>
-                            <span class="text-4xl font-black italic text-white" style="color: var(--accent-color)">${p.id}</span>
+                            <span class="text-4xl font-black italic" style="color: ${isGoat ? '#fff' : 'var(--accent-color)'}">${p.id}</span>
                         </div>`;
                     container.appendChild(card);
                 });
@@ -281,7 +265,7 @@
             const now = new Date().getTime();
             const duration = Math.round(((isOnline ? now : h.lastSeen) - h.firstSeen) / 60000);
             document.getElementById('modalName').innerText = name;
-            document.getElementById('modalStatus').innerText = isOnline ? "Połączony" : "Odłączony";
+            document.getElementById('modalStatus').innerText = isOnline ? "ONLINE" : "OFFLINE";
             document.getElementById('modalStatus').style.color = isOnline ? "#22c55e" : "#ef4444";
             document.getElementById('modalDuration').innerText = `${duration} min`;
             document.getElementById('modalLogs').innerText = h.idHistory.join(' → ');
@@ -289,25 +273,20 @@
         }
 
         function closeModal() { document.getElementById('overlay').style.display = 'none'; }
-        
         function toggleFav(n) {
-            const index = favorites.indexOf(n);
-            if (index === -1) favorites.push(n);
-            else favorites.splice(index, 1);
+            const idx = favorites.indexOf(n);
+            idx === -1 ? favorites.push(n) : favorites.splice(idx, 1);
             localStorage.setItem('przmx_favs', JSON.stringify(favorites));
             renderList();
         }
-
         function toggleFavorites() {
             showOnlyFavs = !showOnlyFavs;
             document.getElementById('favToggleBtn').classList.toggle('active', showOnlyFavs);
             renderList();
         }
-
         function handleServerChange(v) { 
             currentSrv = v; 
-            document.getElementById('player-list').innerHTML = '<div class="col-span-full py-20 text-center italic opacity-50 uppercase tracking-widest animate-pulse">Inicjalizacja sektora...</div>';
-            document.getElementById('count').innerText = '0';
+            document.getElementById('player-list').innerHTML = '<div class="col-span-full py-20 text-center italic opacity-50 uppercase tracking-widest animate-pulse">Ładowanie sektora...</div>';
             fetchData(); 
         }
 
