--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
         .glow-title { text-shadow: 0 0 50px var(--accent-glow); font-style: italic; }
 
         .neo-card { 
-            background: rgba(13, 15, 20, 0.7); 
+            background: rgba(13, 15, 20, 0.75); 
             border: 1px solid rgba(255, 255, 255, 0.05); 
             border-left: 4px solid var(--accent-color); 
-            backdrop-filter: blur(20px); 
+            backdrop-filter: blur(25px); 
             transition: 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
             cursor: pointer; 
         }
@@ -134,7 +134,7 @@
                 <input type="text" id="search" placeholder="SZUKAJ CELU LUB HISTORII..." class="w-full bg-transparent py-8 px-10 text-white outline-none font-extrabold text-3xl placeholder-white/5 uppercase tracking-tighter text-center">
             </div>
             <div class="inline-flex items-center gap-6 px-12 py-4 rounded-full bg-white/5 border border-white/5 backdrop-blur-xl">
-                <span class="text-[12px] font-black uppercase tracking-[0.6em] text-white/30">CELÓW ONLINE:</span>
+                <span class="text-[12px] font-black uppercase tracking-[0.6em] text-white/30">ONLINE:</span>
                 <span id="count" class="text-4xl italic font-black" style="color: var(--accent-color)">0</span>
             </div>
         </div>
@@ -215,13 +215,16 @@
 
                     if (showOnlyFavs && !isFav) return;
 
+                    const labelText = isOnline ? (isGoat ? 'NICK GOATA' : 'NICK CWELA') : 'OFFLINE';
+                    const labelColor = isOnline ? (isGoat ? 'text-white' : 'text-green-500') : 'text-red-500';
+
                     const card = document.createElement('div');
                     card.className = `neo-card p-6 rounded-2xl flex items-center justify-between group ${!isOnline ? 'offline' : ''}`;
                     card.onclick = () => openModal(name);
                     card.innerHTML = `
                         <div class="flex flex-col gap-1 min-w-0">
                             <div class="flex items-center gap-3">
-                                <span class="text-[9px] font-black ${isOnline ? (isGoat ? 'text-white' : 'text-green-500') : 'text-red-500'} uppercase tracking-[0.2em]">${isOnline ? (isGoat ? 'NICK GOATA' : 'ONLINE') : 'OFFLINE'}</span>
+                                <span class="text-[9px] font-black ${labelColor} uppercase tracking-[0.2em]">${labelText}</span>
                                 <svg onclick="event.stopPropagation(); toggleFav('${name}')" class="fav-star ${isFav ? 'active' : ''}" fill="currentColor" viewBox="0 0 20 20"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"/></svg>
                             </div>
                             <h3 class="text-xl font-bold ${isGoat ? 'text-white underline decoration-2 underline-offset-4' : 'text-slate-200'} truncate pr-4">${name}</h3>
