--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     const h = playerHistory[name]; const isOnline = h.isOnline; const isGoat = isGoatNick(name);
                     const id = isOnline ? (onlinePlayers.find(op => op.name === name)?.id || h.idHistory[h.idHistory.length-1]) : h.idHistory[h.idHistory.length-1];
                     const isFav = favorites.includes(name); if (showOnlyFavs && !isFav) return;
-                    const labelText = isOnline ? (isGoat ? 'NICK GOATA' : 'NICK CWELA') : 'OFFLINE';
+                    const labelText = isOnline ? (isGoat ? "NICK GOAT'A" : 'NICK CWELA') : 'OFFLINE';
                     const card = document.createElement('div');
                     card.className = `neo-card p-6 rounded-2xl flex items-center justify-between ${!isOnline ? 'offline' : ''}`;
                     card.onclick = () => openModal(name);
@@ -132,7 +132,7 @@
                     const isFav = favorites.includes(p.name); const isGoat = isGoatNick(p.name); if (showOnlyFavs && !isFav) return;
                     const card = document.createElement('div'); card.className = `neo-card p-6 rounded-2xl flex items-center justify-between`;
                     card.onclick = () => openModal(p.name);
-                    card.innerHTML = `<div class="flex flex-col gap-1 min-w-0"><div class="flex items-center gap-3"><span class="text-[9px] font-black ${isGoat ? 'text-white' : 'text-white/30'} uppercase tracking-[0.2em]">${isGoat ? 'NICK GOATA' : 'NICK CWELA'}</span><svg onclick="event.stopPropagation(); toggleFav('${p.name}')" class="fav-star ${isFav ? 'active' : ''}" fill="currentColor" viewBox="0 0 20 20"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"/></svg></div><h3 class="text-xl font-bold ${isGoat ? 'text-white underline' : 'text-slate-200'} truncate pr-4">${p.name}</h3></div><div class="flex flex-col items-end shrink-0"><span class="text-[9px] font-bold text-white/10 uppercase mb-1">ID</span><span class="text-4xl font-black italic" style="color: ${isGoat ? '#fff' : 'var(--accent-color)'}">${p.id}</span></div>`;
+                    card.innerHTML = `<div class="flex flex-col gap-1 min-w-0"><div class="flex items-center gap-3"><span class="text-[9px] font-black ${isGoat ? 'text-white' : 'text-white/30'} uppercase tracking-[0.2em]">${isGoat ? "NICK GOAT'A" : 'NICK CWELA'}</span><svg onclick="event.stopPropagation(); toggleFav('${p.name}')" class="fav-star ${isFav ? 'active' : ''}" fill="currentColor" viewBox="0 0 20 20"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"/></svg></div><h3 class="text-xl font-bold ${isGoat ? 'text-white underline' : 'text-slate-200'} truncate pr-4">${p.name}</h3></div><div class="flex flex-col items-end shrink-0"><span class="text-[9px] font-bold text-white/10 uppercase mb-1">ID</span><span class="text-4xl font-black italic" style="color: ${isGoat ? '#fff' : 'var(--accent-color)'}">${p.id}</span></div>`;
                     container.appendChild(card);
                 });
             }
