--- a/index.html
+++ b/index.html
@@ -10,24 +10,37 @@
         :root { --accent-color: #0055FF; --accent-glow: rgba(0, 85, 255, 0.4); }
         body { background-color: #050608; color: #f8fafc; font-family: 'Plus Jakarta Sans', sans-serif; min-height: 100vh; margin: 0; overflow-x: hidden; position: relative; }
         .bg-space { position: fixed; inset: 0; background: radial-gradient(circle at 50% 50%, #0a0c18 0%, #050608 100%); z-index: -2; }
-        .bg-grid { position: fixed; inset: 0; background-image: linear-gradient(var(--accent-glow) 1px, transparent 1px), linear-gradient(90deg, var(--accent-glow) 1px, transparent 1px); background-size: 60px 60px; transform: perspective(500px) rotateX(60deg) translateY(-100px); transform-origin: top; opacity: 0.25; animation: moveGrid 20s linear infinite; z-index: -1; }
+        .bg-grid { position: fixed; inset: 0; background-image: linear-gradient(var(--accent-glow) 1px, transparent 1px), linear-gradient(90deg, var(--accent-glow) 1px, transparent 1px); background-size: 60px 60px; transform: perspective(500px) rotateX(60deg) translateY(-100px); transform-origin: top; opacity: 0.2; animation: moveGrid 20s linear infinite; z-index: -1; }
         @keyframes moveGrid { 0% { background-position: 0 0; } 100% { background-position: 0 600px; } }
-        .stars { position: fixed; inset: 0; background-image: radial-gradient(white 1px, transparent 1px); background-size: 100px 100px; opacity: 0.15; z-index: -1; animation: twinkle 5s infinite; }
-        @keyframes twinkle { 0%, 100% { opacity: 0.08; } 50% { opacity: 0.2; } }
         .glow-title { text-shadow: 0 0 50px var(--accent-glow); font-style: italic; }
-        .neo-card { background: rgba(13, 15, 20, 0.75); border: 1px solid rgba(255, 255, 255, 0.05); border-left: 4px solid var(--accent-color); backdrop-filter: blur(25px); transition: 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275); cursor: pointer; }
+        .neo-card { background: rgba(13, 15, 20, 0.75); border: 1px solid rgba(255, 255, 255, 0.05); border-left: 4px solid var(--accent-color); backdrop-filter: blur(25px); transition: 0.3s; cursor: pointer; }
         .neo-card.offline { border-left-color: #ef4444; opacity: 0.4; filter: grayscale(0.8); }
-        .neo-card:hover { transform: translateY(-8px) scale(1.02); border-color: var(--accent-color); box-shadow: 0 20px 40px -10px var(--accent-glow); }
-        #overlay { display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.92); backdrop-filter: blur(25px); z-index: 100; align-items: center; justify-content: center; padding: 20px; }
-        .modal-box { background: rgba(15, 17, 22, 0.95); border: 1px solid var(--accent-color); max-width: 450px; width: 100%; border-radius: 28px; padding: 35px; box-shadow: 0 0 100px -20px var(--accent-glow); }
-        .btn-toggle { background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.1); transition: 0.3s; height: 54px; }
-        .btn-toggle.active { background: var(--accent-color) !important; color: white !important; border-color: white !important; box-shadow: 0 0 30px var(--accent-glow); font-weight: 900; }
+        .neo-card:hover { transform: translateY(-5px); border-color: var(--accent-color); box-shadow: 0 15px 30px -10px var(--accent-glow); }
+        
+        /* Styl Logów LIVE */
+        #live-logs { position: fixed; right: 0; top: 0; height: 100vh; width: 250px; background: rgba(0,0,0,0.4); border-left: 1px solid rgba(255,255,255,0.05); backdrop-filter: blur(10px); z-index: 50; padding: 20px; overflow-y: hidden; display: flex; flex-direction: column; }
+        .log-entry { font-size: 9px; font-weight: 700; font-family: monospace; margin-bottom: 8px; padding: 6px; border-radius: 4px; animation: slideIn 0.3s ease-out; border-left: 2px solid transparent; }
+        @keyframes slideIn { from { transform: translateX(100%); opacity: 0; } to { transform: translateX(0); opacity: 1; } }
+        .log-join { color: #22c55e; background: rgba(34, 197, 94, 0.1); border-left-color: #22c55e; }
+        .log-leave { color: #ef4444; background: rgba(239, 68, 68, 0.1); border-left-color: #ef4444; }
+
+        #overlay { display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.92); backdrop-filter: blur(25px); z-index: 100; align-items: center; justify-content: center; }
+        .modal-box { background: #0d0f12; border: 1px solid var(--accent-color); max-width: 450px; width: 100%; border-radius: 28px; padding: 35px; box-shadow: 0 0 100px -20px var(--accent-glow); }
+        .btn-toggle { background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.1); transition: 0.3s; height: 50px; }
+        .btn-toggle.active { background: var(--accent-color) !important; color: white !important; box-shadow: 0 0 30px var(--accent-glow); }
         .fav-star { transition: 0.2s; color: rgba(255,255,255,0.1); width: 22px; height: 22px; cursor: pointer; }
         .fav-star.active { color: #FFD700; filter: drop-shadow(0 0 8px #FFD700); }
+
+        @media (max-width: 1200px) { #live-logs { display: none; } }
     </style>
 </head>
-<body class="py-16 px-6">
-    <div class="bg-space"></div><div class="bg-grid"></div><div class="stars"></div>
+<body class="py-16 px-6 lg:pr-[280px]">
+    <div class="bg-space"></div><div class="bg-grid"></div>
+
+    <div id="live-logs">
+        <span class="text-[10px] font-black uppercase tracking-widest text-white/20 mb-4 block border-b border-white/5 pb-2">Live Activity Log</span>
+        <div id="log-container" class="flex-1 flex flex-col-reverse"></div>
+    </div>
 
     <div id="overlay" onclick="closeModal()">
         <div class="modal-box text-center" onclick="event.stopPropagation()">
@@ -74,6 +87,16 @@
         let currentSrv = '8rml8v'; let onlinePlayers = []; let favorites = JSON.parse(localStorage.getItem('przmx_favs')) || [];
         let showOnlyFavs = false; let controller = new AbortController();
 
+        function addLog(type, name, id) {
+            const container = document.getElementById('log-container');
+            const time = new Date().toLocaleTimeString('pl-PL', { hour12: false });
+            const log = document.createElement('div');
+            log.className = `log-entry ${type === 'join' ? 'log-join' : 'log-leave'}`;
+            log.innerHTML = `[${time}] ${type === 'join' ? 'JOINED' : 'LEFT'}: ${name} (${id})`;
+            container.prepend(log);
+            if (container.children.length > 30) container.lastChild.remove();
+        }
+
         function checkDailyReset() {
             const lastReset = localStorage.getItem('przmx_last_reset_date'); const today = new Date().toLocaleDateString();
             if (lastReset !== today) { localStorage.removeItem('przmx_history'); localStorage.setItem('przmx_last_reset_date', today); return {}; }
@@ -97,14 +120,35 @@
                 const d = await response.json();
                 if (d?.Data?.players) {
                     const now = new Date().getTime();
-                    d.Data.players.forEach(p => {
-                        if (!playerHistory[p.name]) playerHistory[p.name] = { firstSeen: now, lastSeen: now, idHistory: [p.id], isOnline: true };
-                        else { playerHistory[p.name].lastSeen = now; playerHistory[p.name].isOnline = true; if (!playerHistory[p.name].idHistory.includes(p.id)) playerHistory[p.name].idHistory.push(p.id); }
+                    const newPlayers = d.Data.players;
+                    const newNames = newPlayers.map(p => p.name);
+                    const oldNames = Object.keys(playerHistory).filter(name => playerHistory[name].isOnline);
+
+                    // Wykrywanie kto wszedł
+                    newPlayers.forEach(p => {
+                        if (!playerHistory[p.name]) {
+                            playerHistory[p.name] = { firstSeen: now, lastSeen: now, idHistory: [p.id], isOnline: true };
+                            addLog('join', p.name, p.id);
+                        } else {
+                            if (!playerHistory[p.name].isOnline) {
+                                playerHistory[p.name].isOnline = true;
+                                addLog('join', p.name, p.id);
+                            }
+                            playerHistory[p.name].lastSeen = now;
+                            if (!playerHistory[p.name].idHistory.includes(p.id)) playerHistory[p.name].idHistory.push(p.id);
+                        }
                     });
-                    const currentNames = d.Data.players.map(p => p.name);
-                    Object.keys(playerHistory).forEach(name => { if (!currentNames.includes(name)) playerHistory[name].isOnline = false; });
+
+                    // Wykrywanie kto wyszedł
+                    oldNames.forEach(name => {
+                        if (!newNames.includes(name)) {
+                            playerHistory[name].isOnline = false;
+                            addLog('leave', name, playerHistory[name].idHistory.slice(-1)[0]);
+                        }
+                    });
+
                     localStorage.setItem('przmx_history', JSON.stringify(playerHistory));
-                    onlinePlayers = d.Data.players.sort((a, b) => a.id - b.id); renderList();
+                    onlinePlayers = newPlayers.sort((a, b) => a.id - b.id); renderList();
                 }
             } catch (e) { if (e.name !== 'AbortError') console.log("Reconnecting..."); }
         }
@@ -120,11 +164,10 @@
                     const h = playerHistory[name]; const isOnline = h.isOnline; const isGoat = isGoatNick(name);
                     const id = isOnline ? (onlinePlayers.find(op => op.name === name)?.id || h.idHistory[h.idHistory.length-1]) : h.idHistory[h.idHistory.length-1];
                     const isFav = favorites.includes(name); if (showOnlyFavs && !isFav) return;
-                    const labelText = isOnline ? (isGoat ? "NICK GOAT'A" : 'NICK CWELA') : 'OFFLINE';
                     const card = document.createElement('div');
                     card.className = `neo-card p-6 rounded-2xl flex items-center justify-between ${!isOnline ? 'offline' : ''}`;
                     card.onclick = () => openModal(name);
-                    card.innerHTML = `<div class="flex flex-col gap-1 min-w-0"><div class="flex items-center gap-3"><span class="text-[9px] font-black ${isOnline ? (isGoat ? 'text-white' : 'text-green-500') : 'text-red-500'} uppercase tracking-[0.2em]">${labelText}</span><svg onclick="event.stopPropagation(); toggleFav('${name}')" class="fav-star ${isFav ? 'active' : ''}" fill="currentColor" viewBox="0 0 20 20"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"/></svg></div><h3 class="text-xl font-bold ${isGoat ? 'text-white underline' : 'text-slate-200'} truncate pr-4">${name}</h3></div><div class="flex flex-col items-end shrink-0"><span class="text-[9px] font-bold text-white/10 uppercase mb-1">ID</span><span class="text-4xl font-black italic" style="color: ${isOnline ? (isGoat ? '#fff' : 'var(--accent-color)') : '#ef4444'}">${id}</span></div>`;
+                    card.innerHTML = `<div class="flex flex-col gap-1 min-w-0"><div class="flex items-center gap-3"><span class="text-[9px] font-black ${isOnline ? (isGoat ? 'text-white' : 'text-green-500') : 'text-red-500'} uppercase tracking-[0.2em]">${isOnline ? (isGoat ? "NICK GOAT'A" : 'ONLINE') : 'OFFLINE'}</span><svg onclick="event.stopPropagation(); toggleFav('${name}')" class="fav-star ${isFav ? 'active' : ''}" fill="currentColor" viewBox="0 0 20 20"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"/></svg></div><h3 class="text-xl font-bold ${isGoat ? 'text-white underline' : 'text-slate-200'} truncate pr-4">${name}</h3></div><div class="flex flex-col items-end shrink-0"><span class="text-[9px] font-bold text-white/10 uppercase mb-1">ID</span><span class="text-4xl font-black italic" style="color: ${isOnline ? (isGoat ? '#fff' : 'var(--accent-color)') : '#ef4444'}">${id}</span></div>`;
                     container.appendChild(card);
                 });
             } else {
@@ -151,7 +194,7 @@
         function closeModal() { document.getElementById('overlay').style.display = 'none'; }
         function toggleFav(n) { const idx = favorites.indexOf(n); idx === -1 ? favorites.push(n) : favorites.splice(idx, 1); localStorage.setItem('przmx_favs', JSON.stringify(favorites)); renderList(); }
         function toggleFavorites() { showOnlyFavs = !showOnlyFavs; document.getElementById('favToggleBtn').classList.toggle('active', showOnlyFavs); renderList(); }
-        function handleServerChange(v) { currentSrv = v; document.getElementById('player-list').innerHTML = '<div class="col-span-full py-20 text-center italic opacity-50 uppercase tracking-widest animate-pulse">Zmiana sektora...</div>'; fetchData(); }
+        function handleServerChange(v) { currentSrv = v; document.getElementById('player-list').innerHTML = '<div class="col-span-full py-20 text-center italic opacity-30 uppercase tracking-[0.3em] animate-pulse">Scanning Sector...</div>'; fetchData(); }
 
         document.getElementById('search').oninput = renderList;
         const savedColor = localStorage.getItem('przmx_color'); if(savedColor) updateAccentColor(savedColor);
